Stage Drive/Backend/justbitteam-stagedriving_be-2881552384fc/.kube/production/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stagedriving-prod-be
  labels:
    app: stagedriving-prod-be
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stagedriving-prod-be
  template:
    metadata:
      labels:
        app: stagedriving-prod-be
    spec:
      volumes:
      - name: config-volume
        configMap:
          name: stagedriving-prod
      containers:
      - image: gcr.io/stage-driving/bitbucket.org/justbitteam/stagedriving_be:37429a86a3c7e1ced1a67010075a72d30f8c244a
        name: stagedriving-prod-be
        resources:
          limits:
            memory: 2000Mi
          requests:
            cpu: 300m
            memory: 300Mi
        ports:
        - containerPort: 8080
        - containerPort: 9900
        volumeMounts:
        - name: config-volume
          mountPath: /usr/src/confs
#        livenessProbe:
#          httpGet:
#            path: /healthcheck
#            port: 9900
#          initialDelaySeconds: 10
#          timeoutSeconds: 1
#        readinessProbe:
#          httpGet:
#            path: /healthcheck
#            port: 9900
#          initialDelaySeconds: 10
#          timeoutSeconds: 1
