Stage Drive/Backend/justbitteam-stagedriving_be-2881552384fc/.kube/production/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: stagedriving-prod-be
  name: stagedriving-prod-be
spec:
  ports:
    - port: 80
      name: standard
      targetPort: 8080
      protocol: TCP
    - port: 9900
      name: admin
      targetPort: 9900
      protocol: TCP
  selector:
    app: stagedriving-prod-be
