Stage Drive/Backend/justbitteam-stagedriving_be-2881552384fc/.kube/production/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: stagedriving-prod-be
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
        - api.stagedriving.com
      secretName: sd-be-prod-secret
  rules:
    - host: api.stagedriving.com
      http:
        paths:
        - path: /*
          backend:
            serviceName: stagedriving-prod-be
            servicePort: 80
        - path: /
          backend:
            serviceName: stagedriving-prod-be
            servicePort: 80
        - backend:
            serviceName: stagedriving-prod-be
            servicePort: 9900
          path: /tasks
      #- path: /admin
      #  backend:
      #    serviceName: stagedriving-prod-be
      #    servicePort: 9900
